--- a/GeneCluster/WebRoot/WEB-INF/web.xml
+++ b/GeneCluster/WebRoot/WEB-INF/web.xml
@@ -16,4 +16,9 @@ version="3.0">
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+ 
+  <context-param>
+	<param-name>log4jConfigLocation</param-name>
+	<param-value>WEB-INF/log4j.properties</param-value>
+  </context-param>
 </web-app>
